<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/balance_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_title"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/balance_layout"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:textColor="@color/green"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget_title"
                        android:textSize="17sp"
                        android:textAllCaps="true"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/expense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="32sp"
                        android:textColor="@color/red"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense_title"
                        android:textSize="17sp"
                        android:textAllCaps="true"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/recyclerview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transactions_title"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textAllCaps="true"
            android:layout_below="@id/dashboard"
            android:layout_marginTop="12dp"
            android:layout_marginStart="10dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/recyclerview_title"
            android:layout_marginStart="10dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addBtn"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:minWidth="72dp"
            android:minHeight="72dp"
            android:src="@drawable/ic_add"
            android:backgroundTint="@color/colorAccent"
            app:tint="@color/white"
            app:borderWidth="0dp"
            android:contentDescription="@string/add_element"/>

        <!-- RelativeLayout dla przycisków -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recyclerview_title"
            android:layout_marginTop="8dp">

            <!-- Przycisk Zaznacz wszystko -->
            <Button
                android:id="@+id/selectAllButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_all_button"
                android:textSize="12sp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"/>

            <!-- Przycisk Usuń zaznaczone -->
            <Button
                android:id="@+id/deleteSelectedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_selected_button"
                android:textSize="12sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"/>
        </RelativeLayout>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
